native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_attribute(int32_t device, int32_t attribute, int32_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_cache_config(int32_t* out_config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_by_pci_bus_id(const char* pci_bus_id, int32_t* out_device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_can_access_peer(int32_t device, int32_t peer_device, JYPPX_Boolean* out_can_access);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_enable_peer_access(int32_t peer_device, uint32_t flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_disable_peer_access(int32_t peer_device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_host_atomic_capabilities(uint32_t* capabilities, const int32_t* operations, uint32_t count, int32_t device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_dev_resource_snapshot_safe(int32_t device, int32_t resource_type, JYPPX_CudaDevResourceSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_dev_resource_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_execution_ctx_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_default_memory_pool(int32_t device, uint64_t* out_pool_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_current_memory_pool(int32_t device, uint64_t* out_pool_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_flush_gpu_direct_rdma_writes(int32_t target, int32_t scope);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_memcpy_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_memcpy_node_set_params1_d_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_memcpy_node_set_params_from_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_memcpy_node_set_params_to_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_memset_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_update_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_external_semaphores_signal_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_external_semaphores_signal_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_external_semaphores_wait_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_external_semaphores_wait_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_get_edges_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_get_id_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_host_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_host_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_map_resources_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_resource_get_mapped_mipmapped_array_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_resource_get_mapped_pointer_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_resource_set_map_flags_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_sub_resource_get_mapped_array_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_unmap_resources_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graphics_unregister_resource_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_instantiate_with_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_kernel_node_copy_attributes_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_surface_object_destroy_safe(JYPPX_CudaSurfaceObject* surface);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_destroy_safe(JYPPX_CudaTextureObject* texture);
/* END CUDA FORTY-EIGHTH BATCH GRAPH KERNEL NODE ATTRIBUTES */

/* BEGIN CUDA TWENTY-NINTH BATCH GRAPH MEMORY AND NODE IDENTITY DECLARATIONS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_graph_memory_attribute(int32_t device, int32_t attribute, uint64_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_graph_memory_used_current(int32_t device, uint64_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_graph_memory_used_high(int32_t device, uint64_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_graph_memory_reserved_current(int32_t device, uint64_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_graph_memory_reserved_high(int32_t device, uint64_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_destroy_surface_object_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_destroy_texture_object_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_destroy_external_memory_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_destroy_external_semaphore_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_dev_resource_generate_desc_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_dev_sm_resource_split_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_dev_sm_resource_split_by_count_deferred(void);