src/JYPPX.CudaSharp/Internal/Interop/Generated/GeneratedCudaManifestNativeMethods.g.cs


    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_memcpy_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_memcpy_node_set_params_from_symbol_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_memcpy_node_set_params_to_symbol_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_memcpy_node_set_params1_d_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_memset_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_exec_update_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_external_semaphores_signal_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_external_semaphores_signal_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_external_semaphores_wait_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_external_semaphores_wait_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_get_edges_v2_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_get_id_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_host_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_host_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_instantiate_with_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graph_kernel_node_copy_attributes_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_map_resources_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_resource_get_mapped_mipmapped_array_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_resource_get_mapped_pointer_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_resource_set_map_flags_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_sub_resource_get_mapped_array_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_unmap_resources_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_cuda_graphics_unregister_resource_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_destroy_external_memory_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_destroy_external_semaphore_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_surface_object_destroy_safe(IntPtr surface);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_destroy_surface_object_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_texture_object_destroy_safe(IntPtr texture);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_destroy_texture_object_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_dev_resource_generate_desc_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_dev_sm_resource_split_by_count_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_dev_sm_resource_split_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_can_access_peer(int device, int peer_device, out int out_can_access);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_disable_peer_access(int peer_device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_enable_peer_access(int peer_device, uint flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_flush_gpu_direct_rdma_writes(int target, int scope);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_attribute(int device, int attribute, out int out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_by_pci_bus_id(IntPtr pci_bus_id, out int out_device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_cache_config(out int out_config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_current_memory_pool(int device, out ulong out_pool_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_default_memory_pool(int device, out ulong out_pool_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_dev_resource_snapshot_safe(int device, int resource_type, out NativeCudaDevResourceSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_dev_resource_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_execution_ctx_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_graph_memory_attribute(int device, int attribute, out ulong out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_graph_memory_reserved_current(int device, out ulong out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_graph_memory_reserved_high(int device, out ulong out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_graph_memory_used_current(int device, out ulong out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_graph_memory_used_high(int device, out ulong out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_host_atomic_capabilities(IntPtr capabilities, IntPtr operations, uint count, int device);
